--- a/main/index.html/index.html
+++ b/main/index.html/index.html
@@ -10,6 +10,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
     </head>
     <body>
+        <!-- a coment without any purpose-->
+        <!-- another comment added -->
         <main>
             <div class="glass">
                 <div class="dashboard">
